package com.github.mirukibs.venturerequest.contexts.venuereservation.domain.reservationaggregate;

public enum ReservationStatus {
    CONFIRMED,
    CANCELLED
}
