package com.github.mirukibs.venturerequest.contexts.venuereservation.domain.venueaggregate;

public enum VenueSize {
    SMALL,
    MEDIUM,
    LARGE
}
