package com.github.mirukibs.venturerequest.contexts.venuereservation.requestaggregate;

public enum RequestStatus {
    DRAFT,
    PENDING_REVIEW,
    APPROVED,
    REJECTED
}
