@startuml
title Venue Reservation Bounded Context - Domain Model

skinparam classAttributeIconSize 0

package "Venue Reservation Domain" {

'====================================================
' Aggregate Roots
'====================================================

class VenueRequest <<Aggregate Root>> {
    - id : UUID
    - title : String
    - description : String
    - requesterId : UUID
    - venueId : UUID
    - timePeriod : TimePeriod
    - status : RequestStatus

    --
    + create(...)
    + submit()
    + approve()
    + reject()

    --
    + isDraft()
    + isPendingReview()
    + isApproved()
    + isRejected()
}

class Reservation <<Aggregate Root>> {
    - id : UUID
    - venueId : UUID
    - venueRequestId : UUID
    - requesterId : UUID
    - timePeriod : TimePeriod
    - status : ReservationStatus

    --
    + create(...)
    + cancel()

    --
    + isConfirmed()
    + isCancelled()
}

class Venue <<Aggregate Root>> {
    - id : UUID
    - name : String
    - size : VenueSize
    - facilities : List<String>

    --
    + create(...)
    + rename(name)
    + addFacility(facility)
    + removeFacility(facility)
}

'====================================================
' Shared Value Objects
'====================================================

package "Shared" {

class TimePeriod <<Value Object>> {
    - date : LocalDate
    - startTime : LocalTime
    - endTime : LocalTime

    --
    + create(...)
    + overlaps(period)
    + duration()
    + validate()
}

}

'====================================================
' Enumerations
'====================================================

enum RequestStatus {
    DRAFT
    PENDING_REVIEW
    APPROVED
    REJECTED
}

enum ReservationStatus {
    CONFIRMED
    CANCELLED
}

enum VenueSize {
    SMALL
    MEDIUM
    LARGE
}

'====================================================
' Domain Service
'====================================================

class ReservationAvailabilityPolicy <<Domain Service>> {

    + checkAvailability(venueId, timePeriod)

    + ensureVenueAvailable(venueId, timePeriod)
}

'====================================================
' Repository Interfaces
'====================================================

interface VenueRequestRepository {

    + save(request)

    + findById(id)

    + findPendingReview()

}

interface ReservationRepository {

    + save(reservation)

    + findById(id)

    + findReservationsForVenue(venueId)

}

interface VenueRepository {

    + save(venue)

    + findById(id)

    + findAll()

}

}

'====================================================
' Relationships
'====================================================

VenueRequest *-- TimePeriod
Reservation *-- TimePeriod

Venue --> VenueSize

VenueRequest --> RequestStatus
Reservation --> ReservationStatus

VenueRequest "0..*" --> "1" Venue : requests
Reservation "0..*" --> "1" Venue : reserves

Reservation --> VenueRequest : references

ReservationAvailabilityPolicy ..> ReservationRepository
ReservationAvailabilityPolicy ..> TimePeriod

VenueRequestRepository ..> VenueRequest
ReservationRepository ..> Reservation
VenueRepository ..> Venue

@enduml